kubernetes/middleware/ingress-nginx/templates/reverse-proxy-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reverse-proxy
  namespace: ingress-nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: reverse-proxy
  template:
    metadata:
      labels:
        app: reverse-proxy
    spec:
      containers:
        - name: nginx
          image: nginx:alpine
          volumeMounts:
            - name: config-volume
              mountPath: /etc/nginx/nginx.conf
              subPath: nginx.conf
      volumes:
        - name: config-volume
          configMap:
            name: reverse-proxy-config
