kubernetes/middleware/ingress-nginx/templates/reverse-proxy-service.yml
apiVersion: v1
kind: Service
metadata:
  name: reverse-proxy
  namespace: ingress-nginx
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: reverse-proxy
